# homescope

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  compose.dev.yml  justfile
common/: Cargo.toml
common/src/: device_id.rs  frame.rs  lib.rs  observation.rs  packet.rs  reading.rs
docs/: architecture.md  flashing.md  protocol.md
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/receiver/: Cargo.toml  flash_uf2.sh
firmware/receiver/src/: ble_scan.rs  main.rs
firmware/sensor/: Cargo.toml  flash_uf2.sh  memory.x
firmware/sensor/src/: ble_advertise.rs  main.rs
gateway/: Cargo.toml
gateway/src/: main.rs
tools/uf2/: LICENSE  README.md
