[package]
name = "homescope-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
packet = ["dep:bytemuck", "dep:crc"]
reading = ["dep:serde"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
crc = { version = "3.4.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
