[package]
name = "homescope-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
wire = ["dep:bytemuck", "dep:crc"]
serde = ["dep:serde", "dep:heapless"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
crc = { version = "3.4.0", optional = true }
heapless = { version = "0.9.3", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
