[workspace]
resolver = "3"
members = ["sensor", "receiver"]

[workspace.dependencies]
homescope-common = { path = "../common" }

[profile.release]
debug = 2

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "812a56e3411bc3ff850d354401d95221e1f4fb84"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "812a56e3411bc3ff850d354401d95221e1f4fb84"}
trouble-host = {git = "https://github.com/embassy-rs/trouble.git", rev = "37835a19d1289168bffbb171084eb5e6ae65d36b"}
