[package]
name = "homescope-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
homescope-common = { workspace = true, features = ["packet"] }

bt-hci = { version = "0.8", features = ["defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.10.0", features = ["defmt", "nrf52840", "time", "time-driver-rtc1"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
nrf-sdc = { version = "0.4.0", features = ["defmt", "nrf52840", "peripheral", "central"] }
panic-probe = "1.0.0"
static_cell = "2.1.1"
trouble-host = { version = "0.6.0", features = ["defmt", "scan"] }
heapless = "0.9.3"
embassy-usb = "0.6.0"
embassy-sync = { version = "0.8.0", features = ["defmt"] }

[[bin]]
name = "homescope-receiver"
bench=false
test=false

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/receiver" }
]


